# systach

./: README.md  nightlypush.sh
nightly/: build.sh  run.sh  uninstall.sh
nightly/package/contents/themes/chrome/: theme.cfg
nightly/package/contents/ui/: radial.qml
nightly/sources/: systach.cpp
stable/0.1/: README  build.sh  install.sh  uninstall.sh
stable/0.1/package/contents/themes/chrome/: theme.cfg
stable/0.1/package/contents/themes/light/: theme.cfg
stable/0.1/package/contents/ui/: configure.qml  main.qml
stable/0.1/sources/: CMakeLists.txt  datasourceSettings.ui  systach.cpp  systach.h
stable/0.2/: build.sh  install.sh
stable/0.2/package/contents/ui/: main.qml  radial.qml
stable/0.2/sources/: generalSettings.ui  systach.cpp
unstable/: bnr.sh  install.sh  plasma-restart.sh  run.sh
unstable/0.11/: build.sh
unstable/0.11/package/: metadata.desktop
unstable/0.11/package/contents/code/: systach-main.js
unstable/0.11/package/contents/themes/dark/: theme.cfg
unstable/0.11/package/contents/themes/light/: theme.cfg
unstable/0.11/package/contents/ui/: digital.qml  main.qml
unstable/0.11/sources/: advancedSettings.ui  datasourceSettings.ui  plasma-applet-systach.desktop  systach.h
unstable/sources/: CMakeLists.txt
